# barkland

./: .configuration.example  .gitignore  Dockerfile  README.md  pyproject.toml
agentic-sandbox-client/k8s_agent_sandbox/: connector.py  sandbox.py
agentic-sandbox-client/k8s_agent_sandbox/commands/: async_command_executor.py  command_executor.py
agentic-sandbox-client/sandbox-router/: sandbox_router.py
barkland/: config.py  main.py
barkland/agents/: dog_agent.py  personalities.py  remote_speak.py
barkland/api/: endpoints.py  websocket.py
barkland/engine/: fsm.py  matching.py  needs.py  simulation.py
barkland/models/: dog.py
barkland/services/: sandbox_manager.py  simulation_manager.py
barkland/templates/: dashboard.html
k8s/: barkland-app.yaml  sandbox_router.yaml  sandbox_template.yaml  sandbox_warmpool.yaml
plans/: DemoReviewApr-9-2026  k8s_client_optimizations.md
scratch/: test_claims.py  test_speak.py  test_speak_other.py
scripts/: build_and_push.sh  deploy.sh  push-images
tests/e2e/: conftest.py  test_determinism.py  test_simulation.py  test_websocket.py
tests/unit/: test_fsm.py  test_matching.py  test_needs.py  test_utilities.py
