[project]
name = "barkland"
version = "0.1.0"
description = "A Multi-Agent Dog Simulation System"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "google-genai",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
sandbox = [
    "k8s-agent-sandbox",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
    "mypy",
]

[tool.setuptools]
packages = ["barkland", "barkland.models", "barkland.engine", "barkland.agents", "barkland.api", "barkland.output"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
